# NxTransit

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.md  connectors.py  converters.py  examples_h3.ipynb  functions.py  loaders.py  other.py  pyproject.toml  requirements.txt  routers.py  routers_dev.py  ruff.toml  setup.py  tests_3.ipynb  verification_tests.py
.github/workflows/: basic_tests.yml  pypi_release.yaml  python-package.yml  remove-old-artifacts.yml  test_pypi_release.yaml
docs/: requirements.txt
docs/source/: NxTransit.rst  conf.py  examples_h3.ipynb  index.rst  internals.rst
docs/source/data/Klaipeda/: calendar.txt  calendar_dates.txt  shapes.txt  stops.txt
docs/source/data/Klapeida/: agency.txt  blocks.txt  routes.txt  trips.txt
nxtransit/: __init__.py  _version.py  accessibility.py  connectors.py  converters.py  frequency.py  functions.py  loaders.py  other.py  routers.py
tests/: loading_test.py  main_test.py  test_functions.py  test_routers.py
tests/test_data/Zhelez/: agency.txt  calendar.txt  calendar_dates.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  trips.txt
transit/: __init__.py  calculate_delay.cp312-win_amd64.pyd  calculate_delay.pyx  connectors.py  converters.py  functions.py  loaders.py  other.py  routers.py  setup.py
