[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NxTransit"
dynamic = ["version"]
description = "Construct and analyze time-dependent transit networks from GTFS data"
authors = [{ name = "Chingiz Zhanarbaev" }]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "geopandas>=1.0.0",
    "networkx>=3.2.0",
    "numpy>=1.26.4,<2.0.0",
    "osmnx>=1.9.1",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "Shapely>=2.0.3",
    "geocube>=0.6.0",
]


license = { text = "MIT License" }
requires-python = ">=3.10"

[project.optional-dependencies]
tests = ["pytest>=8.0.1"]
docs = ["myst-nb", "sphinx-book-theme", "sphinx==7.2.6"]

[tool.setuptools]
packages = ["nxtransit"]

[tool.setuptools.dynamic.version]
attr = 'nxtransit.__version__'

# python -m build
# twine upload dist/*
# twine upload --repository testpypi dist/*
