[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NxTransit"
dynamic = ["version"]
description = "Construct and analyze time-dependent transit networks from GTFS data"
authors = [{ name = "Chingiz Zhanarbaev" }]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "geopandas>=0.14.0",
    "networkx>=3.2.0",
    "numpy>=1.26.0,<2.0.0",
    "osmnx>=1.9",
    "pandas>=2.0",
    "scipy>=1.12.0",
    "shapely>=2.0",
    "geocube>=0.5.0",
]

license = { text = "MIT License" }
requires-python = ">=3.10"

[project.optional-dependencies]
tests = ["pytest>=8.0.1"]
docs = ["myst-nb", "sphinx-book-theme", "sphinx==7.2.6"]

[tool.uv]
dev-dependencies = [
    "hatchling",
    "pytest >=8.0.1",
    "sphinx==7.2.6",
    "myst-nb",
    "sphinx-book-theme",
    "twine",
]

[tool.hatch.build]
packages = ["nxtransit"]

[tool.hatch.version]
path = 'nxtransit/__init__.py'

[tool.hatch.envs.default]
installer = "uv"

# twine upload dist/*
# twine upload --repository testpypi dist/*
